# easy-voro

./: .envrc  .gitignore  Makefile  README.md  SETUP_ja.md  check_vvol_col4.py  pyproject.toml
easy_voro/: voro_wrapper.py
examples/: animate_voronoi_volumes.py  gromacs_to_voronoi.py  gromacs_to_vvol.py  vvol_indexer.py  vvol_to_yaplot.py
src/: voro_volumes.cpp
