[tool.poetry]
name = "easy-voro"
version = "0.1.0"
description = "A simple and fast Python wrapper for voro++ using JSON interface."
authors = ["vitroid <vitroid@gmail.com>"]
readme = "README.md"
packages = [{include = "easy_voro"}]
package-mode = true

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.24.0"
# pyvoro3 = {git = "https://github.com/vitroid/pyvoro.git"}
pyvoro = "1.3.2"
pyvista = "^0.46.0"
matplotlib = "^3.10.0"
imageio = {extras = ["ffmpeg"], version = "^2.37.2"}
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
